--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "axios": "^0.18.0",
     "body-parser": "^1.15.2",
     "dotenv": "^6.0.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "scrollmonitor": "^1.2.0",
+    "vue": "^2.5.17",
+    "vue-resource": "^1.5.1"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.18.7",
     "reload": "^2.3.1"
   }
 }
